tests/errors/2006-25.vb
'#compiler-options:/sdkpath:
'#compiler-message:Command line error BC2006 : option 'sdkpath' requires ':<path>'
'#exit-code:1